Added event for matchEnded

--- a/src/GosuArena/GosuArena/Scripts/SpecRunner.html
+++ b/src/GosuArena/GosuArena/Scripts/SpecRunner.html
@@ -16,8 +16,10 @@
   <script type="text/javascript" src="gosu/math/line.js"></script>
   <script type="text/javascript" src="gosu/math/rectangle.js"></script>
   <script type="text/javascript" src="gosu/snapshot.js"></script>
+  <script type="text/javascript" src="gosu/eventAggregator.js"></script>
   <script type="text/javascript" src="actionQueue.js"></script>
   <script type="text/javascript" src="rectangleCache.js"></script>
+  <script type="text/javascript" src="events.js"></script>
   <script type="text/javascript" src="bot.js"></script>
   <script type="text/javascript" src="bullet.js"></script>
   <script type="text/javascript" src="gameClock.js"></script>
