--- a/src/GosuArena/GosuArena/Scripts/SpecRunner.html
+++ b/src/GosuArena/GosuArena/Scripts/SpecRunner.html
@@ -36,6 +36,7 @@
   <script type="text/javascript" src="gosu/math/lineSpecs.js"></script>
   <script type="text/javascript" src="gosu/math/vectorSpecs.js"></script>
   <script type="text/javascript" src="gosu/math/rectangleSpecs.js"></script>
+  <script type="text/javascript" src="gosu/jasmineMatchers.js"></script>
   <script type="text/javascript" src="gosu/snapshotSpecs.js"></script>
   <script type="text/javascript" src="botSpecs.js"></script>
   <script type="text/javascript" src="gameSpecs.js"></script>
