--- a/src/GosuArena/GosuArena/Scripts/SpecRunner.html
+++ b/src/GosuArena/GosuArena/Scripts/SpecRunner.html
@@ -18,6 +18,7 @@
   <script type="text/javascript" src="gosu/snapshot.js"></script>
   <script type="text/javascript" src="gosu/eventAggregator.js"></script>
   <script type="text/javascript" src="actionQueue.js"></script>
+  <script type="text/javascript" src="userActionQueue.js"></script>
   <script type="text/javascript" src="rectangleCache.js"></script>
   <script type="text/javascript" src="events.js"></script>
   <script type="text/javascript" src="bot.js"></script>
