--- a/src/GosuArena/GosuArena/Scripts/SpecRunner.html
+++ b/src/GosuArena/GosuArena/Scripts/SpecRunner.html
@@ -17,30 +17,30 @@
   <script type="text/javascript" src="gosu/math/rectangle.js"></script>
   <script type="text/javascript" src="gosu/snapshot.js"></script>
   <script type="text/javascript" src="gosu/eventAggregator.js"></script>
-  <script type="text/javascript" src="actionQueue.js"></script>
-  <script type="text/javascript" src="userActionQueue.js"></script>
-  <script type="text/javascript" src="rectangleCache.js"></script>
-  <script type="text/javascript" src="events.js"></script>
-  <script type="text/javascript" src="bot.js"></script>
-  <script type="text/javascript" src="bullet.js"></script>
-  <script type="text/javascript" src="gameClock.js"></script>
-  <script type="text/javascript" src="fakeClock.js"></script>
-  <script type="text/javascript" src="collisionDetector.js"></script>
-  <script type="text/javascript" src="arenaState.js"></script>
-  <script type="text/javascript" src="botOptions.js"></script>
-  <script type="text/javascript" src="engine.js"></script>
+  <script type="text/javascript" src="game/actionQueue.js"></script>
+  <script type="text/javascript" src="game/userActionQueue.js"></script>
+  <script type="text/javascript" src="game/rectangleCache.js"></script>
+  <script type="text/javascript" src="game/events.js"></script>
+  <script type="text/javascript" src="game/bot.js"></script>
+  <script type="text/javascript" src="game/bullet.js"></script>
+  <script type="text/javascript" src="game/gameClock.js"></script>
+  <script type="text/javascript" src="game/fakeClock.js"></script>
+  <script type="text/javascript" src="game/collisionDetector.js"></script>
+  <script type="text/javascript" src="game/arenaState.js"></script>
+  <script type="text/javascript" src="game/botOptions.js"></script>
+  <script type="text/javascript" src="game/engine.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="gosu/math/matchers.js"></script>
-  <script type="text/javascript" src="gosu/math/mathSpecs.js"></script>
-  <script type="text/javascript" src="gosu/math/pointSpecs.js"></script>
-  <script type="text/javascript" src="gosu/math/lineSpecs.js"></script>
-  <script type="text/javascript" src="gosu/math/vectorSpecs.js"></script>
-  <script type="text/javascript" src="gosu/math/rectangleSpecs.js"></script>
-  <script type="text/javascript" src="gosu/jasmineMatchers.js"></script>
-  <script type="text/javascript" src="gosu/snapshotSpecs.js"></script>
-  <script type="text/javascript" src="botSpecs.js"></script>
-  <script type="text/javascript" src="gameSpecs.js"></script>
+  <script type="text/javascript" src="gosu/math/specs/matchers.js"></script>
+  <script type="text/javascript" src="gosu/math/specs/mathSpecs.js"></script>
+  <script type="text/javascript" src="gosu/math/specs/pointSpecs.js"></script>
+  <script type="text/javascript" src="gosu/math/specs/lineSpecs.js"></script>
+  <script type="text/javascript" src="gosu/math/specs/vectorSpecs.js"></script>
+  <script type="text/javascript" src="gosu/math/specs/rectangleSpecs.js"></script>
+  <script type="text/javascript" src="gosu/specs/jasmineMatchers.js"></script>
+  <script type="text/javascript" src="gosu/specs/snapshotSpecs.js"></script>
+  <script type="text/javascript" src="game/specs/botSpecs.js"></script>
+  <script type="text/javascript" src="game/specs/gameSpecs.js"></script>
 
   <script type="text/javascript">
     (function() {
