--- a/src/GosuArena/GosuArena/Scripts/SpecRunner.html
+++ b/src/GosuArena/GosuArena/Scripts/SpecRunner.html
@@ -16,11 +16,13 @@
   <script type="text/javascript" src="gosu/math/line.js"></script>
   <script type="text/javascript" src="gosu/math/rectangle.js"></script>
   <script type="text/javascript" src="gosu/snapshot.js"></script>
+  <script type="text/javascript" src="gosu/meta.js"></script>
   <script type="text/javascript" src="gosu/eventAggregator.js"></script>
   <script type="text/javascript" src="game/actionQueue.js"></script>
   <script type="text/javascript" src="game/userActionQueue.js"></script>
   <script type="text/javascript" src="game/rectangleCache.js"></script>
   <script type="text/javascript" src="game/events.js"></script>
+  <script type="text/javascript" src="game/worldObject.js"></script>
   <script type="text/javascript" src="game/bot.js"></script>
   <script type="text/javascript" src="game/bullet.js"></script>
   <script type="text/javascript" src="game/gameClock.js"></script>
