Converted terrain into proper objects instead of just being represented as a rectangle

--- a/src/GosuArena/GosuArena/Scripts/SpecRunner.html
+++ b/src/GosuArena/GosuArena/Scripts/SpecRunner.html
@@ -23,6 +23,7 @@
   <script type="text/javascript" src="game/rectangleCache.js"></script>
   <script type="text/javascript" src="game/events.js"></script>
   <script type="text/javascript" src="game/worldObject.js"></script>
+  <script type="text/javascript" src="game/terrain.js"></script>
   <script type="text/javascript" src="game/bot.js"></script>
   <script type="text/javascript" src="game/bullet.js"></script>
   <script type="text/javascript" src="game/gameClock.js"></script>
