Added onCollision event

--- a/src/GosuArena/GosuArena/Scripts/SpecRunner.html
+++ b/src/GosuArena/GosuArena/Scripts/SpecRunner.html
@@ -42,6 +42,7 @@
   <script type="text/javascript" src="gosu/math/specs/rectangleSpecs.js"></script>
   <script type="text/javascript" src="gosu/specs/jasmineMatchers.js"></script>
   <script type="text/javascript" src="gosu/specs/snapshotSpecs.js"></script>
+  <script type="text/javascript" src="game/specs/ticker.js"></script>
   <script type="text/javascript" src="game/specs/botSpecs.js"></script>
   <script type="text/javascript" src="game/specs/gameSpecs.js"></script>
 
