Added documentation for missing properties in bot status. Added hp to bot status

--- a/src/GosuArena/GosuArena/Scripts/SpecRunner.html
+++ b/src/GosuArena/GosuArena/Scripts/SpecRunner.html
@@ -31,6 +31,7 @@
   <script type="text/javascript" src="game/collisionDetector.js"></script>
   <script type="text/javascript" src="game/arenaState.js"></script>
   <script type="text/javascript" src="game/botOptions.js"></script>
+  <script type="text/javascript" src="game/botRegistrar.js"></script>
   <script type="text/javascript" src="game/engine.js"></script>
 
   <!-- include spec files here... -->
